# simple-assembler

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: prog.asm
src/: constants.rs  error_handling.rs  lexer.rs  main.rs  parser.rs  spec.rs  tokenizer.rs
src/lexer/: lexer.rs  lexer_error.rs  token_definition.rs
tests/: lexer_test.rs  realistic_test.token_stream  test.asm  test.token_stream  two_labels_error.asm
tests/real_test/: realistic_test.asm  realistic_test.token_stream
