[package]
name = "simple-assembler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
logos = { version = "0.15.0" }# , features = ["debug"] }
miette = { version = "7.5.0", features = ["fancy"] }

[dev-dependencies]
rusty-hook = "^0.11.2"
pretty_assertions = "1"